--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                     <div class="card" style="width: 18rem;">
                         <img src="/img/feet-1840619_1920.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
+                            <p></p>
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -264,8 +265,8 @@
                 <div class="col mx-auto position-relative abs1">
 
                     <div class="position-absolute top-50 start-50 translate-middle abs">
-                        <div class="card sexcard" style="width: 18rem;">
-                            <img src="img/stand-5126363_1920.jpg" class="img-thumbnail cardimg p-0" alt="...">
+                        <div class="card sexcard" style="width: 18rem;height: 50%;">
+                            <img src="img/tenis-hombre-nike.jpg" class="img-thumbnail cardimg p-0" alt="...">
                             <div class="card-body text-center ">
                                 <a href=" " class="btn btn-outline-dark "> Ver</a>
                             </div>
@@ -279,7 +280,7 @@
                     <div class="">
                         <div class="card sexcard " style="width: 18rem; ">
 
-                            <img src="img/woman-1828538_1920.jpg " class="img-thumbnail  cardimg p-0" alt="... ">
+                            <img src="img/fab6c405b602564b69ee15d83af26e1c.jpg" style="width: 100%;height: 210px;" class="img-thumbnail  cardimg p-0" alt="... ">
                             <div class=" card-body text-center ">
                                 <a href=" " class="btn btn-outline-dark "> Ver</a>
                             </div>
