--- a/enlaces/reservalist.html
+++ b/enlaces/reservalist.html
@@ -12,6 +12,75 @@
 </head>
 
 <body>
+    <!--Lista-->
+
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <a href="reservalist.html" class="btn btn-success">Realizar Pedido</a>
+
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+
+        <div class="offcanvas-body">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="../img/zapatilla1.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">ZAPATILLAS RUNNING ADIDAS DURAMO SL MUJER NEGRA</h5>
+                                    <p class="card-text">50bs</p>
+                                    <button class="card-text btn btn-danger">Cancelar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="../img/zapatilla1.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">ZAPATILLAS RUNNING ADIDAS DURAMO SL MUJER NEGRA</h5>
+                                    <p class="card-text">50bs</p>
+                                    <button class="card-text btn btn-danger">Cancelar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="../img/zapatilla1.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">ZAPATILLAS RUNNING ADIDAS DURAMO SL MUJER NEGRA</h5>
+                                    <p class="card-text">50bs</p>
+                                    <button class="card-text btn btn-danger">Cancelar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!---->
+
     <!-- inicio sesion-->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -108,11 +177,7 @@
                 <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1" data-bs-whatever="@mdo">Registrase</button>
 
             </div>
-            <div class="col-sm-auto">
 
-                <a class="nav-link text-light" href="#"> ¿Podemos ayudarte?</a>
-
-            </div>
 
 
         </div>
@@ -124,9 +189,8 @@
 
         <div class="container-fluid p-4 ">
             <div class="row">
-                <div class="col-sm-12 ">
-                    <img src="../img/iconos/logo.PNG " alt=" " width=" " class="imgicon ">
-                    <img src="../img/iconos/carro-de-la-compra.png" class="rounded float-end p-1 " width="50px" alt="... ">
+                <div class="col-sm-1 " style="display: flex;">
+                    <img src="../img/iconos/logo.PNG" alt="" width="" class="imgicon">
 
                 </div>
 
@@ -135,29 +199,35 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-            <div class="container-fluid ">
+            <div class="container-fluid">
 
-                <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
-                    <span class="navbar-toggler-icon "></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                   </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent ">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="font-style: oblique; ">
+                <div class="collapse navbar-collapse circle" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-style: oblique;">
 
-                        <li class="nav-item ">
-                            <a class="nav-link " href="# ">INICIO /</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">INICIO /</a>
                         </li>
 
-                        <li class="nav-item ">
-                            <a class="nav-link " href="# ">MARCAS /</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          MARCAS
+                        </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">NIKE</a></li>
+                                <li><a class="dropdown-item" href="#">ADIDAS</a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="# ">HOMBRE /</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="producto.html">HOMBRE /</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="# ">MUJER /</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="producto.html">MUJER /</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="# ">CONTACTANOS</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ayuda.html">CONTACTANOS</a>
                         </li>
 
 
@@ -168,6 +238,8 @@
         </nav>
 
     </div>
+
+
 
     <div class="container p-3 ">
         <div class="row ">
@@ -225,7 +297,117 @@
             </div>
         </div>
     </div>
+    <footer class="text-light" style="background-color: #141414;">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6  p-4">
+                    <img src="../img/iconos/upds-logo-social-preview.jpg" alt="" class="imgicon">
+                </div>
+                <div class="col-lg-6  p-4">
+                    <img src="../img/iconos/upds-logo-social-preview.jpg" width="170px" class="rounded float-end imgicon" alt="">
+                </div>
+            </div>
+            <div class="row">
 
+                <div class="col-lg-2 p-4">
+                    <h6>ATENCION AL CLIENTE</h6>
+                    <br>
+                    <a href="" class="text-light" data-bs-toggle="modal" data-bs-target="#staticBackdrop">¿Necesitas ayuda?</a>
+                    <br>
+                    <br>
+                    <a href="" class="text-light" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">Importante Covid-19</a>
+                    <br>
+                    <br>
+                    <a href="" class="text-light" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">Términos y Condiciones</a>
+                </div>
+                <div class="col-lg-4 p-4">
+                    <h6>INTEGRANTES</h6>
+                    <br>
+                    <a href="" class="text-light">Brayan Fernandez Mercado</a>
+                    <br>
+                    <br>
+                    <a href="" class="text-light">Kevin Campero Alvarez</a>
+                </div>
+
+            </div>
+            <div class="row border-top p-3">
+                <div class="col-lg-12">
+                    <p class="text-center">Copyright 2021 © Zapatillas</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog-scrollable modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">¿Necesitas ayuda?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body " style="text-align: justify;">
+                    <h6>¿Cómo puedo contactarlos?</h6>Contamos con distintos canales de atención, cualquier duda o consulta que tengas siéntete libre de preguntar mediante: Nuestras redes sociales: Facebook , Instagram, Twiter, TickTok, Tumblr Correo electrónico
+                    elmergm82@gmail.com Número de WhatsApp 67407464
+                    <h6>¿Cuál es el horario de atención?</h6>Puedes contactarnos en cualquier momento, para recibir respuestas más inmediatas nuestro horario es el siguiente: 9:00 AM a 8 :00 PM de lunes a Sábado. Y domingo de 9 am hasta 2 pm
+                    <h6>¿Este es un sitio seguro?
+                    </h6> Ten la confianza de que tu información está siendo gestionada de la manera correcta y que este sitio web tiene los certificados de seguridad SSL correspondientes.
+                    <h6>¿Cómo realizan el servicio de despacho?</h6> Los despachos los realizamos habiendo confirmado la información de los pedidos y realizado el empaque y procediendo de despacho hasta las 9:00 AM en días hábiles. Para que tu producto este
+                    seguro tenemos tres métodos de entrega: Pasa por nuestra tienda principal ubicado en la C. Reza # 363 casi Tumusla y te entregamos tu producto *El costo de envió en Cochabamba es de 10 Bs y interior 20 Bs. *Entrega Mediante Flota o
+                    transportadora que llegaría al día siguiente *Entrega mediante las tiendas Status. * Entrega en Avion. En cualquiera de los casos llamamos por WhatsApp de manera gratuita y coordinamos en vivo tu pedido y entrega para indicarte en
+                    que situación Si tienes dudas nos puedes escribir a nuestro formulario de contactos
+                </div>
+                <div class="modal-footer">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!---->
+
+    <div class="modal fade " id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog-scrollable modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Importante Covid-19</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body " style="text-align: justify;">
+                    Atendiendo a las recomendaciones de las Autoridades Nacionales tomamos algunas medidas en nuestras tiendas físicas y virtuales: Todos nuestros productos estas desinfectados con diferentes productos para cuidar tu salud, además al momento de ingresar a
+                    nuestra tienda te desinfectamos desde tus pies hasta tu cabello para resguardar tu salud y la salud de tu familia. Nuestros clientes tienen la posibilidad de realizar cualquier compra, aprovechando nuestras promociones tomando en cuenta
+                    lo siguiente:
+                    <h5>ENTREGAS:</h5> Para Cochabamba la entrega debe ser en el mismo dia. Los pedidos para el interior del país serán despachados entre 2 a 3 dias , esto debito a todavía pasamos por un periodo de cuarentena para todo el pais.
+                    <h5>RECOJO EN TIENDA:</h5> Si realizaste un pedido de Recojo en tienda Status, el mismo estará disponible el tiempo necesario hasta que puedas buscarlo.
+                    <h5>CAMBIOS Y DEVOLUCIONES:</h5>Extenderemos el plazo para que puedas realizar tu solicitud (Tomando en cuenta el punto; ¿Como realizo un cambio?). . Tendrás 3 días a partir de la entrega de tu producto para poder realizar la solicitud
+                    de cambiarlo del mismo producto, de lo contrario no se podrá realizar ningún cambio. Nuestras sucursales permanecerán totalmente cerradas hasta finalizar el aislamiento.
+                </div>
+                <div class="modal-footer">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!---->
+    <div class="modal fade " id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog-scrollable modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Términos y Condiciones</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body " style="text-align: justify;">
+                    <h6>Propiedad intelectual</h6>
+                    <li>El contenido que publicamos en este sitio web, ya sea texto, fotografías, videos, entre otros, son propiedad exclusiva de Status Zapatillas.</li> <br>
+                    <li> El uso de nuestra marca está prohibido para aquellos que no están autorizados por titulares.</li>
+                    <br>
+                    <li>El registro de cada Usuario se verificará una vez que el formulario sea completando y enviado.</li> <br>
+                    <h6>Contraseña</h6> Ya una vez que el usuario esté registrado, este accederá a su cuenta por medio de su correo electrónico y su contraseña para un acceso confidencial y seguro. <br> El Usuario asume totalmente la responsabilidad por el
+                    mantenimiento de la confidencialidad de su clave secreta registrada en este Sitio, la cual le permite efectuar compras, solicitar servicios y obtener información. Dicha clave es de uso personal y su entrega a terceros, no involucra
+                    responsabilidad de la Empresa en caso de mala utilización. </div>
+                <div class="modal-footer">
+
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js " integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js " integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc " crossorigin="anonymous "></script>
 
